Use test data jar instead of file cache in integration tests.